@@ -22,7 +22,7 @@
         }
     ],
     "version": "2.5.12",
-    "time": "2022-06-18",
+    "time": "2022-06-19",
     "repositories": [
         {
             "type": "pear",
