@@ -4,7 +4,7 @@
   state:
     release: stable
     api: stable
-  date: 2022-06-18
+  date: 2022-06-19
   license:
     identifier: LGPL-2.1
     uri: http://www.horde.org/licenses/lgpl21
